# human

./: .gitignore  Floral Gateways.txt  Peripheral Visions 02.txt  Peripheral Visions.txt  README.md  archive.txt  boredom-overview-detailed.txt  full_list.txt  id_chunk_aa  id_chunk_ab  id_chunk_ac  id_chunk_ad  local-scope.txt  overview.txt  psygen.txt
analysis/: deepdrinks.txt  least-common-words  (+4 more)
projects/zebratube/zebra-core/: pyproject.toml
projects/zebratube/zebra-core/prompts/: wiki_article_construction.txt  wiki_article_mathematical.txt  wiki_article_science.txt
projects/zebratube/zebra-core/render/: render_ambiguity_diffusion.py  render_narrative_film.py  render_sonic_mapping.py
projects/zebratube/zebra-core/src/: build_corpus_graph.py  generate_scripts.py  recycle.py
projects/zebratube/zebra-core/src/agent/: agent.py  config.py  corpus_inspector.py  hardware.py  scorer.py
projects/zebratube/zebra-core/wiki/: generate_articles.py  serve.py
projects/zebratube/zebra-core/zebra/: zebra
projects/zebratube/zebratube-api/: Dockerfile  alembic.ini  pyproject.toml
projects/zebratube/zebratube-api/app/: db.py  main.py
projects/zebratube/zebratube-api/app/models/: schema.py
projects/zebratube/zebratube-api/app/routers/: agent.py  assemblies.py  claims.py  projects.py  reviews.py  search.py  submissions.py  tasks.py  users.py
projects/zebratube/zebratube-api/app/services/: bounty.py
projects/zebratube/zebratube-api/app/workers/: ingest.py  ingest_project.py  transcode_worker.py
projects/zebratube/zebratube-api/migrations/: env.py  script.py.mako
(+5990 files in other folders)
