[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "zebratube-api"
version = "0.1.0"
description = "ZebraTube backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2",
    "httpx>=0.27",
    "celery>=5.3",
    "redis>=5.0",
]

[project.scripts]
zebratube-api = "app.main:start"
